# server-analytics

./: .gitignore  README.md  main.py  pyproject.toml
antistasi_server_analytics/: __init__.py  __main__.py  application_context.py  argv_handling.py  main.py
antistasi_server_analytics/commands/: __init__.py  base_command.py  general_commands.py  info_commands.py
antistasi_server_analytics/data_types/: __init__.py  aux_data_types.py  connection_entry.py  player_data.py  player_data_container.py  players_container.py
antistasi_server_analytics/loader/: __init__.py  _base_loader.py  _loader_collector.py  csv_loader.py  folder_loader.py  json_loader.py  zip_loader.py
antistasi_server_analytics/misc/: output_helper.py
tools/: python_dev_requirements.txt  python_requirements.txt  python_test_requirements.txt  setup_python_venv.ps1
